--- a/hand-crafted-nn.md.ipynb
+++ b/hand-crafted-nn.md.ipynb
@@ -60,9 +60,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.01413649]\n",
+      " [0.97945525]\n",
+      " [0.97890334]\n",
+      " [0.0231201 ]]\n"
+     ]
+    }
+   ],
    "source": [
     "    X = np.array([[0, 0, 1],\n",
     "                  [0, 1, 1],\n",
@@ -80,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,11 +101,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<matplotlib.lines.Line2D at 0x1823313d30>]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAX0AAAD8CAYAAACb4nSYAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAADl0RVh0U29mdHdhcmUAbWF0cGxvdGxpYiB2ZXJzaW9uIDIuMi4yLCBo\ndHRwOi8vbWF0cGxvdGxpYi5vcmcvhp/UCwAAHy9JREFUeJzt3X9w3PWd3/HnS79sLLBjyzrO+DfC\nSXAIFxPFDiSNGUgAX6+QZHITQ5gCpcP4Gs+1ZZgelIa0znQmCZk0zUALzAW4JnCEpMmdk0AI5dc0\nBWyLXw4GHCTzw8IEZJnYnIxtSfvuH/uVWK1W1sra1X5X+3rMaLT7/bF6+yvvaz/6fD/f70cRgZmZ\n1Ya6ShdgZmZTx6FvZlZDHPpmZjXEoW9mVkMc+mZmNcShb2ZWQxz6ZmY1xKFvZlZDHPpmZjWkodIF\n5Js/f34sW7as0mWYmVWVp556am9EtI63XepCf9myZXR0dFS6DDOzqiLptWK2c/eOmVkNceibmdUQ\nh76ZWQ1x6JuZ1RCHvplZDZkWoX/LY1083rV3xLLHu/Zyy2NdFarIzCydpkXon75oDhvvfmY4+B/v\n2svGu5/h9EVzKlyZmVm6pG6c/rE4q20+N12yio13P8Ola5bwoy2vc9MlqzirbX6lSzMzS5Vp0dKH\nbPBfumYJ33+4k0vXLHHgm5kVMG1C//Guvfxoy+v89Tmn8KMtr4/q4zczs2kS+kN9+Dddsoqrz/vQ\ncFePg9/MbKRpEfrbu/eP6MMf6uPf3r2/wpWZmaWLIqLSNYzQ3t4evuGamdnESHoqItrH225atPTN\nzKw4Dn0zsxri0DczqyFFhb6kCyTtlNQp6doC6zdI+p2kZyX9VtLKnHXXJfvtlHR+KYs3M7OJGTf0\nJdUDNwPrgJXAxbmhnrg7Ij4aER8Dvg18N9l3JbAe+AhwAfA/ktczM7MKKKalvxrojIhdEXEEuAe4\nKHeDiDiQ87QZGBoSdBFwT0QcjohXgM7k9czMrAKKuffOQmB3zvNuYE3+RpK+ClwNNAHn5Oz7ZN6+\nC4+pUjMzm7RiWvoqsGzU4P6IuDki2oC/Af7TRPaVdJWkDkkdPT09RZRkZmbHopjQ7wYW5zxfBOw5\nyvb3AJ+fyL4RcVtEtEdEe2traxElmZnZsSgm9LcBKyQtl9RE9sTs5twNJK3IefrPgZeTx5uB9ZJm\nSFoOrAC2Tr5sMzM7FuP26UfEgKSNwANAPXB7ROyQtAnoiIjNwEZJnwX6gXeAy5J9d0i6F3gBGAC+\nGhGDZfq3mJnZOHzvHTOzacD33jEzs1Ec+mZmNcShb2ZWQxz6ZmY1xKFvZlZDHPpmZjXEoW9mVkMc\n+mZmNcShb2ZWQxz6ZmY1xKFvZlZDHPpmZjXEoW9mVkMc+mZmNcShb2ZWQxz6ZmY1xKFvZlZDHPpm\nZjXEoW9mVkOmRejf8lgXj3ftHbHs8a693PJYV4UqMjNLp2kR+qcvmsPGu58ZDv7Hu/ay8e5nOH3R\nnApXZmaWLg2VLqAUzmqbz02XrGLj3c9w6Zol/GjL69x0ySrOaptf6dLMzFKlqJa+pAsk7ZTUKena\nAuuvlvSCpO2SHpK0NGfdoKRnk6/NpSw+11lt87l0zRK+/3Anl65Z4sA3Mytg3Ja+pHrgZuBzQDew\nTdLmiHghZ7NngPaIOCjpr4BvA19O1r0XER8rcd0jnPOdR3m1t49MQEOduOWxLnbs2c//fXkv/YNB\nY71YNHcWD19zdjnLMDNLvWK6d1YDnRGxC0DSPcBFwHDoR8QjOds/CVxayiLHs3z+LHbt7QNgIBMA\nPPRSz/D6I4PB6/v6WHbtrwA4rrGOF7+xbipLNDNLhWK6dxYCu3OedyfLxnIlcH/O85mSOiQ9Kenz\nx1DjuD6xvIVzP9x61G0GMu8/FrDs2l9x6tfuH3N7M7PpqJjQV4FlUXBD6VKgHbgxZ/GSiGgHLgG+\nJ6mtwH5XJR8MHT09Pfmrx7VhbRs/uHw1J82ZOe62jXVwsD/7CSDglP/4Ky6/Y+uEf6aZWTUqJvS7\ngcU5zxcBe/I3kvRZ4Hrgwog4PLQ8IvYk33cBjwKr8veNiNsioj0i2ltbj95iH8v1P9/Onv2Hxt0u\nyXtmNdZxsD/DQAYe79zLOd959Jh+rplZNSkm9LcBKyQtl9QErAdGjMKRtAq4lWzgv52zfK6kGcnj\n+cCnyDkXUCrX/3w7d23ZPf6GOYZa+5Dt8+/5p0Nu8ZvZtDdu6EfEALAReAB4Ebg3InZI2iTpwmSz\nG4HjgZ/kDc08FeiQ9BzwCPDNvFE/JfFE1z7q60R9nWg8xsvN3j00yFOv7fNVvGY2rSmiYPd8xbS3\nt0dHR8cx73/5HVv57ct7GUz+Xcc11I1o1R9NHXDinJk8cd25x/zzzcwqQdJTyfnTo5oWV+TmuvOK\n1SOen/q1+5HGD/86IEP25O7ld2wd9TpmZtPBtAv9fEPj8U/92v001I0cupkrA9QL9uw/xHFN9VNX\noJnZFJoWN1wrxovfWMeSec001RcagZo1mPR0DbX2zcymm5oJfYCHrzmbs06Zz+yZ2ZZ8ofivF3T2\n9LF738GpLc7MbArUVOhDts9//vEzaWluLHiF2VBrf1nLLLf2zWzaqbnQh2yLv6m+nrF6ek5pbeah\nl3rc2jezaacmQx/gsk8t48TZ2ds25Gd/Z0/25m2zZzZ43L6ZTSs1G/ob1rbROnsGjXUq2M1TXwcv\n/eFdXuvtm/LazMzKpWZDH2DdaQtoPWEGkL0XT67BDAxmghfePFCJ0szMyqKmQ3/D2jY++KcncO6H\nWwteuHVkMGhpbqpAZWZm5VHToQ/Z0Tyv9hY+YStgwZyZHsVjZtNGzYc+wPEzG5jRUDfqhG4Ad23Z\nTd3Y13OZmVUVhz7Zvv1PndJScJ2A3r4jU1uQmVmZOPTJ9u1D4enAAjjtpNkeumlm04JDP9Hbd4RZ\nTfWjRvHMaqzjZ0+/wf3Pv1mhyszMSsehn1h32gK+sOqkUaN4DvZneK8/41E8ZjYtOPQTG9a28fye\nAwVvwiYYvnrXzKyaOfRztDQ3EYy+LYMEdfLtls2s+jn0c2QCvrJmccHlHrppZtOBQz/HnVes5s39\nhwqO4nEXj5lNBw79PL19R8Zs0b914JCHbppZVXPo51m5YHb26twCwf9EV6/vumlmVa2o0Jd0gaSd\nkjolXVtg/dWSXpC0XdJDkpbmrLtM0svJ12WlLL4clrY088UzFhJ5fTwBDAwW6vgxM6se44a+pHrg\nZmAdsBK4WNLKvM2eAdoj4nTgp8C3k33nAV8H1gCrga9Lmlu68ktvaOhmoS6egYxD38yqWzEt/dVA\nZ0TsiogjwD3ARbkbRMQjETF0q8ongUXJ4/OBByNiX0S8AzwIXFCa0stn5YLZhcfry/36Zlbdign9\nhcDunOfdybKxXAncf4z7pkZ9gaZ+JuD/dbpf38yqVzGhX6jRW7CfQ9KlQDtw40T2lXSVpA5JHT09\nPUWUVF5LW5r59Ir5Y3TxjJ5sxcysWhQT+t1A7hVLi4A9+RtJ+ixwPXBhRByeyL4RcVtEtEdEe2tr\na7G1l82GtW2cOHvmqJO5ABF4CkUzq1rFhP42YIWk5ZKagPXA5twNJK0CbiUb+G/nrHoAOE/S3OQE\n7nnJsqpQX+DoZMK3Wjaz6jVu6EfEALCRbFi/CNwbETskbZJ0YbLZjcDxwE8kPStpc7LvPuAbZD84\ntgGbkmVVobF+9GxaAn729Bvu1zezqtRQzEYRcR9wX96yG3Ief/Yo+94O3H6sBVbK0pZmzmxr4bGd\nPeQOzw/gyKD79c2sOvmK3DEM9esPDc3PbfG7X9/MqpVD/yjeOvD+zddyz+m6X9/MqpVD/yiGbrVc\naOim+/XNrBo59I/izitWkwkKDt08PJBxF4+ZVR2H/jHKBJ4318yqjkN/HEP9+vldPHWCM9ta3K9v\nZlXFoT+OoX79UbdaDrjx1zu5//k3K1OYmdkxcOiPY6hfP192vH64i8fMqopDvwi5Qzdzed5cM6s2\nDv0i9PYdKTiFopTt27/8jq2VKczMbIIc+kVYd9oCrjn/g6NuCp0JuGvL7jEnUjczSxuHfhE2rG3j\nia5ed/GYWdVz6Bept+/ImC16T6FoZtXCoV+klQtmF+zXB3iiy1Momll1cOgXaWlLM188Y+Ho8frA\nwGDB2SPNzFLHoV+kDWvbeH7PgYKT/vZnwvfhMbOq4NCfgJULZhecQhF8q2Uzqw4O/QnyFIpmVs0c\n+hMwNIVi/igeT6FoZtXCoT8BQ1MojnXa1kM3zSztipoY3d731oFDZCJ7C4bckTyZTHbopi/UMrM0\nc0t/goanUMxbHsk6M7M0Kyr0JV0gaaekTknXFlj/GUlPSxqQ9KW8dYOSnk2+Npeq8EoZ61bLAAMZ\n9+ubWbqN270jqR64Gfgc0A1sk7Q5Il7I2ex14HLgmgIv8V5EfKwEtaZeobl0zczSpJiW/mqgMyJ2\nRcQR4B7gotwNIuLViNgO1ExTt77AjXgykb3Vsk/mmllaFRP6C4HdOc+7k2XFmimpQ9KTkj4/oepS\namlLM59eMX/0vLnAvdu6PV7fzFKrmNE7he48MJGOjCURsUfSycDDkn4XESOawpKuAq4CWLJkyQRe\nujI2rG3jtd6+EQemTtmWviZ0aMzMplYxLf1uYHHO80XAnmJ/QETsSb7vAh4FVhXY5raIaI+I9tbW\n1mJfOjWGAt/MLO2KCf1twApJyyU1AeuBokbhSJoraUbyeD7wKeCFo+9VPSTRWKcRge+TuWaWZuOG\nfkQMABuBB4AXgXsjYoekTZIuBJD0CUndwF8Ct0rakex+KtAh6TngEeCbeaN+qtbSlma+/IlF9Oc1\n8X0y18zSrKgrciPiPuC+vGU35DzeRrbbJ3+/x4GPTrLGVNqwto3rfrZ9VNdOQ132ZO6X2kcdDjOz\nivMVuZOUfzJ3IAMZn8w1s5Ry6JeIT+aaWTVw6E+ST+aaWTVx6E+CT+aaWbVx6E/ChrVtwwGfa+hk\nrq/MNbO0ceiXgE/mmlm1cOiXkE/mmlnaOfRLwCdzzaxaOPQnySdzzayaOPQnySdzzayaOPRLpCEn\n9YdO5iL4F392UuWKMjPL49AvkUxAU71oyOnbP+2k2Wzv3l/ZwszMcjj0S0gSyunm2f7GfnfvmFmq\nOPRLYGlLM6ctnM3hgQz9g8HqZXMBGMzAWwcOVbg6M7P3OfRLYMPaNuY1NwHZ/vytr74z3Mf/Tt8R\nj+Axs9Rw6JfI6uUtnNLaPNyfP5AJzv1wKzv2vOsuHjNLDYd+iZy+aA6v9h4cfl4neOilnhF9/GZm\nlebQL5FfPLdneKx+7u0YMhEetmlmqeHQLyWJcz/cOuJ2DEvnzfKwTTNLDYd+iSxtaWblghN46KUe\nGpKjWifo7Olj6yu9lS3OzCzh0C+R3BE8AxlYvWzucIvfI3jMLC0c+iV04uyZ1Cf9+ltffYemhjqa\n6sXzbxzwCB4zS4WiQl/SBZJ2SuqUdG2B9Z+R9LSkAUlfylt3maSXk6/LSlV4Gi1taeaji+YMPx/M\nZJCH75hZiowb+pLqgZuBdcBK4GJJK/M2ex24HLg7b995wNeBNcBq4OuS5k6+7HQ6fdEcdv7hXSDb\nnz+YgcMDGRob6jyCx8xSoZiW/mqgMyJ2RcQR4B7gotwNIuLViNgOZPL2PR94MCL2RcQ7wIPABSWo\nO5V+8dweBoNRI3hOmjPTI3jMLBWKCf2FwO6c593JsmJMZt+q4xE8ZpZ2xYR+oU7pYicDLGpfSVdJ\n6pDU0dPTU+RLp49H8JhZ2hUT+t3A4pzni4A9Rb5+UftGxG0R0R4R7a2trUW+dDp5BI+ZpVkxob8N\nWCFpuaQmYD2wucjXfwA4T9Lc5ATuecmyacsjeMwszcYN/YgYADaSDesXgXsjYoekTZIuBJD0CUnd\nwF8Ct0rakey7D/gG2Q+ObcCmZNm0dfqiOTz/xgFg5AieuvxJdM3MKqChmI0i4j7gvrxlN+Q83ka2\n66bQvrcDt0+ixqryi+eyvVeNdaI/ZwhP/2D+wCYzs6nnK3JLbGlLM1/+xKIRgQ/Zu27WCZ/MNbOK\ncuiX2Ia1bcMBn6uhDu7d1u2TuWZWUQ79MsnN/Dplh3Bmih7pamZWHg79MqlPmvq5E6rUSb4dg5lV\nlEO/XDyhipmlkEO/DHw7BjNLK4d+Gfh2DGaWVg79Mjlx9szhk7m5t2PY3r2f+59/s6K1mVntcuiX\nydKWZtpam4efD2YyRMBgQEvyV4CZ2VRz6JfJ6Yvm8GrvweHngxnozwSNdeLE2TMrWJmZ1TKHfpn8\n4rk9NNZreOjmkABObm12v76ZVYRDv0yWtjRz9XkfJGLkBVmDmeC7v/m9r8w1s4pw6JfJhrVtPNHV\nO2Kcvsi29A8P+OZrZlYZDv0y6u07MnwPnjq9P2VY+G4MZlYhDv0yWrlgNnUSjXUa2eL3rfXNrEIc\n+mV0tNssv33gEJffsbVClZlZrXLol9HQbZbzG/Z1gode6hl1+2Uzs3Jz6E+B/HAfut++x+ub2VRz\n6FeIBG8dOOTx+mY2pYqaI9cmp6mhjkMDmRGjdjIZeKKr1619M5tSbumX2dKWZr54xsJRwzQDGBj0\n2E0zm1oO/TLbsLaN5/ccGHUyF7L34nnhzQNTXpOZ1a6iQl/SBZJ2SuqUdG2B9TMk/ThZv0XSsmT5\nMknvSXo2+bqltOVXh5ULZlM/xpE+7aTZ7tc3sykzbuhLqgduBtYBK4GLJa3M2+xK4J2IOAX4b8C3\nctZ1RcTHkq8NJaq76jQWSH0BP+no9v31zWzKFNPSXw10RsSuiDgC3ANclLfNRcDfJY9/Cpwr+brT\nIUtbmjmzrWXU0M0AjgwGdeDWvplNiWJCfyGwO+d5d7Ks4DYRMQDsB1qSdcslPSPpMUn/bJL1VqUN\na9s4cfbMghdj1Qle+sO7vuummU2JYoZsFmqx5w87GWubN4ElEdEr6ePAP0j6SESMOHsp6SrgKoAl\nS5YUUVL1eevAIQYzcMLMBt49NDC8PCJ7u2Wf0DWzqVBMS78bWJzzfBGwZ6xtJDUAc4B9EXE4InoB\nIuIpoAv4YP4PiIjbIqI9ItpbW1sn/q+oApmAS9Yspu/wwIjl7uIxs6lUTOhvA1ZIWi6pCVgPbM7b\nZjNwWfL4S8DDERGSWpMTwUg6GVgB7CpN6dXlzitW8+b+Q2QKDM0XsGPPAZ/QNbOyG7d7JyIGJG0E\nHgDqgdsjYoekTUBHRGwGfgD8UFInsI/sBwPAZ4BNkgaAQWBDROwrxz+kGvT2HWFGQ92oSVSGWvv/\ndGig8I5mZiWi/On8Kq29vT06OjoqXUZZ3PJYF1tf6eXRnT0FW/znfriVwcj+VWBmNhGSnoqI9vG2\n8xW5U2jD2jaAgoE/e2Y9D73Uw/buP05xVWZWSxz6U2yoiyd/uNOBQ4MALJ03y5OrmFnZOPSn2LrT\nFrBywQmjxrxCtrX/zO797N53cMrrMrPa4NCfYhvWtnEgOWHb0tw4Yt1Qa1/g1r6ZlYXvp18Bi+fN\nYlnLLB56qWfUujpBZ08f+w4eqUBlZjbduaVfAXdesZoX33wXyHbp5Bo6yTtvVhPnfOfRKa7MzKY7\nh36FzGysZ9XiOcNdOrlamhvp7Onjj+8d8VW6ZlZSDv0Kefias4f79vN/Cb19/QD8sa+fmx/pnOLK\nzGw6c+hX0PEzG2isE5kx1meApnpxxqbfTGVZZjaNOfQraN1pC5h9XPZc+imtzaPWtzQ30tvXz0Am\n4/59MysJh34FbVjbxpzjmjiltZnOntH30+/t60dkh3K+uf89B7+ZTZpDv8IevuZs9vVlh2cW+mUM\nXcT1Xn/GwW9mk+bQT4HTF3+AluZGMoy+YCvXe/0Zut856D5+MztmDv0UuPOK1US834d/tMmFjwwG\nh/oH+ejXf+3hnGY2YQ79lHj6hvM4MpBBjJ6LMt/B/gzvHh7k279+ya1+M5sQh36KfPWcFRyfd4Xu\n0WQC+g4PcPJ1v3Jfv5kVxaGfIhvWtvHxpfM4rrH4X8vhwSAT8Pq+PpZf+yu3/M3sqDxzVgpdfsdW\ntuzq5b3+sS7bGtuMenF4MBAwd1YjT99wXukLNLPUKXbmLId+Sl1+x1Ye79zLkcFj//0MfQBA9u6d\ny1qaefias0tUoZmliUN/GrjlsS5ufqSTwcEMB4+h1Z+v0Eni4xrrePEb6yb92mZWWQ79aeSMTb9h\n/3v9TKLRf8zcTWRWHRz608wtj3Xx3Qd/z8BgpuDE6mmT/1dFU724+rwPDU8Ob2al5dCfpi6/Yyu/\nfXkvmYiqCP9a5PMnVgklDX1JFwD/HagH/jYivpm3fgbwv4CPA73AlyPi1WTddcCVwCDw1xHxwNF+\nlkO/OEMt//7B7AVd/gAwmz6OpeFQbOiPO0eupHrgZuBzQDewTdLmiHghZ7MrgXci4hRJ64FvAV+W\ntBJYD3wEOAn4P5I+GBGjp4uyCdmwtm24qyT3AwCgXmLAnwJmVSsTcGbbvLK8djETo68GOiNiF4Ck\ne4CLgNzQvwj4z8njnwI3SVKy/J6IOAy8Iqkzeb0nSlO+wcgPABj9IQBAjH97BzNLh6+sWcx//cLp\nZXntYkJ/IbA753k3sGasbSJiQNJ+oCVZ/mTevgvzf4Ckq4CrAJYsWVJs7TaG/A+BIad+7X4ODYwc\n+pmyUzpmNe+kOTPLFvhQXOgXuuljflSMtU0x+xIRtwG3QbZPv4ia7BgUMx7fHwxmlbVn/yGu//n2\nirb0u4HFOc8XAXvG2KZbUgMwB9hX5L6WIqW4UOuMTb/hj+/1j/h09weHWfHu2pLtXClH8BcT+tuA\nFZKWA2+QPTF7Sd42m4HLyPbVfwl4OCJC0mbgbknfJXsidwWwtVTFWzrV0oVcQ0NoByOokwgPpbUS\nqBM80bWvLK89bugnffQbgQfIDtm8PSJ2SNoEdETEZuAHwA+TE7X7yH4wkGx3L9mTvgPAVz1yx6aT\nO69YXekSzCbEF2eZmU0DxY7T9/30zcxqiEPfzKyGOPTNzGqIQ9/MrIak7kSupB7gtUm8xHxgb4nK\nKYe01wfprzHt9YFrLIW01wfpqnFpRLSOt1HqQn+yJHUUcwa7UtJeH6S/xrTXB66xFNJeH1RHjfnc\nvWNmVkMc+mZmNWQ6hv5tlS5gHGmvD9JfY9rrA9dYCmmvD6qjxhGmXZ++mZmNbTq29M3MbAzTJvQl\nXSBpp6ROSddWsI7Fkh6R9KKkHZL+bbJ8nqQHJb2cfJ+bLJek7yd1b5d0xhTVWS/pGUm/TJ4vl7Ql\nqe/HkpqS5TOS553J+mVTVN8HJP1U0kvJsTwzTcdQ0r9Pfr/PS/p7STMrfQwl3S7pbUnP5yyb8DGT\ndFmy/cuSLpuCGm9Mfs/bJf1c0gdy1l2X1LhT0vk5y8vyfi9UX866aySFpPnJ84ocw0mLiKr/Inv3\nzy7gZKAJeA5YWaFaFgBnJI9PAH4PrAS+DVybLL8W+Fby+M+B+8lOOPNJYMsU1Xk1cDfwy+T5vcD6\n5PEtwF8lj/8NcEvyeD3w4ymq7++Af508bgI+kJZjSHb2t1eA43KO3eWVPobAZ4AzgOdzlk3omAHz\ngF3J97nJ47llrvE8oCF5/K2cGlcm7+UZwPLkPV5fzvd7ofqS5YvJ3mn4NWB+JY/hpP+NlS6gRL+o\nM4EHcp5fB1xX6bqSWv6R7KTyO4EFybIFwM7k8a3AxTnbD29XxpoWAQ8B5wC/TP7T7s154w0fz+Q/\n+pnJ44ZkO5W5vtlJqCpveSqOIe9PDzovOSa/BM5PwzEEluUF6oSOGXAxcGvO8hHblaPGvHVfAO5K\nHo94Hw8dx3K/3wvVR3bu7z8DXuX90K/YMZzM13Tp3ik0j++ouXinWvJn/CpgC3BiRLwJkHz/k2Sz\nStT+PeA/AEPzIrYAf4yIgQI1jJj/GBia/7icTgZ6gDuSLqi/ldRMSo5hRLwBfAd4HXiT7DF5inQd\nwyETPWaVfi/9K7KtZ45Sy5TWKOlC4I2IeC5vVSrqm6jpEvpFzcU7lSQdD/xv4N9FxIGjbVpgWdlq\nl/QXwNsR8VSRNVTi2DaQ/RP7f0bEKqCPbNfEWKb6GM4FLiLb5XAS0AwUmmeyksdwPJOa17ocJF1P\ndrKlu4YWjVHLlNUoaRZwPXBDodVj1JHG3/ew6RL6qZqLV1Ij2cC/KyJ+lix+S9KCZP0C4O1k+VTX\n/ingQkmvAveQ7eL5HvABZec3zq9huD6NnP+4nLqB7ojYkjz/KdkPgbQcw88Cr0RET0T0Az8DziJd\nx3DIRI9ZRd5LycnOvwC+EkmfSEpqbCP74f5c8p5ZBDwt6U9TUt+ETZfQH57HNxkxsZ7svL1TTpLI\nTh/5YkR8N2fV0DzCJN//MWf5v0xGAnwS2D/053g5RMR1EbEoIpaRPU4PR8RXgEfIzm9cqL6huofn\nPy5XfUmNfwB2S/pQsuhcslNupuIYku3W+aSkWcnve6i+1BzDHBM9Zg8A50mam/xFc16yrGwkXQD8\nDXBhRBzMq319MvppOe/PsT1l7/eI+F1E/ElELEveM91kB2r8gRQdwwmp9EmFUn2RPZP+e7Jn9a+v\nYB2fJvun3Hbg2eTrz8n24T4EvJx8n5dsL+DmpO7fAe1TWOvZvD9652Syb6hO4CfAjGT5zOR5Z7L+\n5Cmq7WNAR3Ic/4HsKIjUHEPgvwAvAc8DPyQ7wqSixxD4e7LnGPrJhtOVx3LMyPardyZfV0xBjZ1k\n+8CH3i+35Gx/fVLjTmBdzvKyvN8L1Ze3/lXeP5FbkWM42S9fkWtmVkOmS/eOmZkVwaFvZlZDHPpm\nZjXEoW9mVkMc+mZmNcShb2ZWQxz6ZmY1xKFvZlZD/j9kZ/YlzWQGNQAAAABJRU5ErkJggg==\n",
+      "text/plain": [
+       "<Figure size 432x288 with 1 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "plt.show(nn.losses, 'x')"
+    "plt.plot(nn.losses, 'x')"
    ]
   },
   {
